sprint4/tests/error/24_div0.py
# Division by 0. This also works with opt off and it will error in [RUNTIME]
#
print(1 / 0)
